<resources>
    <string name="app_name">Patient Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_id">1</string>
    <string name="title">title</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="show_records">Show records</string>
</resources>